--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: project.KAKAO_SDK_VERSION
     implementation 'com.facebook.android:facebook-android-sdk:4.+'
     implementation 'org.altbeacon:android-beacon-library:2+'
+    implementation 'com.google.android.gms:play-services-appindexing:8.1.0'
     
 }
 
