--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
+
         classpath 'com.android.tools.build:gradle:3.1.2'
 
         classpath 'com.google.gms:google-services:4.0.0'
@@ -19,8 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
-        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
+        maven { url "https://maven.google.com" }
     }
 }
 
